Fix right side horizontal scroll

--- a/apps/frontend/src/routes/ClockPage.module.scss
+++ b/apps/frontend/src/routes/ClockPage.module.scss
@@ -25,6 +25,7 @@
 	overflow-y: auto;
 	text-align: left;
 	padding: var(--spacing);
+	min-width: fit-content;
 }
 
 .input {
